# fractal-benchmark

./: .gitignore  CMakeLists.txt  configure  install-and-run-scala.sh  run-scala.sh  run-scala.txt  scala-values.txt
include/: calculate_fractal.hpp  config.hpp  fractal_request.hpp  fractal_request_stream.hpp  q_byte_array_info.hpp
scripts/: ovs-ifdown  ovs-ifup  run_benches  run_benches_16_quadcores  start_vms  stop_vms
src/: Mandelbrot.cpp  Mandelbrot.h  Mandelbrot.java  benchmark.erl  caf-fractal.cpp  charm_fractal.ci  charm_fractal.cpp  client.cpp  compile_nif_linux.txt  compile_nif_osx.txt  config.cpp  fractal.erl  fractal.qrc  fractalWorker.conf  fractal_nif.cpp  fractal_request_stream.cpp  makefile.old  mpi-fractal.cpp  org_caf_Mandelbrot.h  q_byte_array_info.cpp  scala-fractal.scala  scala-requests.scala  server.cpp
src/charm/: charm_fractal.ci  charm_fractal.cpp
